...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Name_abcd"
        app:layout_constraintTop_toBottomOf="@+id/Confirm_your_name"
        app:layout_constraintVertical_bias="0.494" />

    <Button
        android:id="@+id/name_comfirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:onClick="nameConfirmOnClick"
        android:text="Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
...
